--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Amazing Games</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -14,6 +18,9 @@
     }
 
     header {
+      position: sticky;
+      top: 0;
+      z-index: 100;
       background: #020617;
       padding: 20px;
       display: flex;
@@ -23,40 +30,102 @@
 
     nav a {
       color: #38bdf8;
-      margin-left: 20px;
+      margin-left: 18px;
       text-decoration: none;
       font-weight: bold;
     }
 
-    .hero {
-      padding: 80px 20px;
+    section {
+      padding: 100px 20px;
       text-align: center;
+    }
+
+    /* HERO */
+    .hero {
+      padding-top: 120px;
     }
 
     .hero h1 {
       font-size: 48px;
-      margin-bottom: 10px;
     }
 
     .hero p {
+      max-width: 700px;
+      margin: 20px auto;
       font-size: 18px;
       opacity: 0.9;
     }
 
-    .buttons a {
-      display: inline-block;
-      margin: 15px;
-      padding: 15px 25px;
-      background: #38bdf8;
-      color: black;
-      border-radius: 8px;
-      text-decoration: none;
+    /* GAMES */
+    .games {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+      max-width: 1200px;
+      margin: auto;
+      padding-top: 40px;
+    }
+
+    .game-card {
+      position: relative;
+      background: #020617;
+      border-radius: 14px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .game-card:hover {
+      transform: scale(1.04);
+    }
+
+    .game-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      background: black;
+    }
+
+    .overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.85);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    .game-card:hover .overlay {
+      opacity: 1;
+    }
+
+    .game-info {
+      padding: 15px;
+    }
+
+    .game-title {
+      font-size: 18px;
       font-weight: bold;
     }
 
+    /* APPLY BUTTON */
+    .apply-btn {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 16px 30px;
+      background: #38bdf8;
+      color: black;
+      font-weight: bold;
+      border-radius: 10px;
+      text-decoration: none;
+    }
+
     footer {
+      padding: 40px;
       text-align: center;
-      padding: 20px;
       opacity: 0.6;
     }
   </style>
@@ -64,29 +133,72 @@
 
 <body>
 
-  <header>
-    <h2>Amazing Games</h2>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Games</a>
-      <a href="#">Jobs</a>
-      <a href="#">Apply</a>
-    </nav>
-  </header>
+<header>
+  <div style="display:flex; align-items:center; gap:12px;">
+    <img src="logo.png" style="height:42px;">
+    <h2 style="margin:0;">Amazing Games</h2>
+  </div>
 
-  <section class="hero">
-    <h1>We Build Roblox Experiences</h1>
-    <p>Official website for Amazing Roblox projects</p>
+  <nav>
+    <a href="#games">Games</a>
+    <a href="#about">About</a>
+    <a href="#apply">Apply</a>
+    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">Roblox Group</a>
+    <a href="https://discord.gg/KDgXznhSsc" target="_blank">Discord</a>
+  </nav>
+</header>
 
-    <div class="buttons">
-      <a href="#">Roblox Group</a>
-      <a href="#">Discord</a>
+<!-- HERO -->
+<section class="hero">
+  <h1>Building the Next Amazing Roblox Games</h1>
+  <p>
+    Amazing Games is a Roblox studio focused on creating polished, replayable,
+    front-page-ready experiences and investing in talented developers.
+  </p>
+</section>
+
+<!-- GAMES -->
+<section id="games">
+  <h1>Our Games</h1>
+
+  <div class="games">
+
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/92661235863904/Prison-Island')">
+      <img id="thumb-prison">
+      <div class="overlay">
+        <p>Escape or enforce the law on a remote prison island.</p>
+      </div>
+      <div class="game-info">
+        <div class="game-title">🔥 Prison Island</div>
+      </div>
     </div>
-  </section>
 
-  <footer>
-    © 2025 Amazing Games
-  </footer>
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/97441539448665/99-Rooms-in-a-basement')">
+      <img id="thumb-99">
+      <div class="overlay">
+        <p>Survive puzzles and horrors in a dark basement.</p>
+      </div>
+      <div class="game-info">
+        <div class="game-title">🚪 99 Rooms in a Basement</div>
+      </div>
+    </div>
 
-</body>
-</html>
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/74672529469747/Eat-Food-To-Grow-Bigger')">
+      <img id="thumb-eat">
+      <div class="overlay">
+        <p>Eat, grow, rebirth, and dominate the leaderboard.</p>
+      </div>
+      <div class="game-info">
+        <div class="game-title">🍔 Eat Food To Grow Bigger!</div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about">
+  <h1>About Us</h1>
+  <p style="max-width:800px; margin:auto; font-size:18px;">
+    Founded in <b>January 2025</b>, Amazing Games is a Roblox
+
