--- a/index.html
+++ b/index.html
@@ -40,20 +40,23 @@
       text-align: center;
     }
 
-    /* HERO */
-    .hero {
-      padding-top: 120px;
+    h1 {
+      font-size: 42px;
+      margin-bottom: 20px;
     }
 
-    .hero h1 {
-      font-size: 48px;
-    }
-
-    .hero p {
-      max-width: 700px;
-      margin: 20px auto;
+    p {
       font-size: 18px;
+      max-width: 850px;
+      margin: 15px auto;
       opacity: 0.9;
+      line-height: 1.6;
+    }
+
+    /* HERO */
+    .hero img {
+      height: 110px;
+      margin-bottom: 20px;
     }
 
     /* GAMES */
@@ -104,22 +107,35 @@
 
     .game-info {
       padding: 15px;
-    }
-
-    .game-title {
-      font-size: 18px;
       font-weight: bold;
     }
 
-    /* APPLY BUTTON */
+    /* APPLY */
+    .apply-box {
+      background: #020617;
+      border-radius: 14px;
+      padding: 30px;
+      max-width: 700px;
+      margin: 30px auto;
+    }
+
     .apply-btn {
       display: inline-block;
-      margin-top: 25px;
-      padding: 16px 30px;
+      margin-top: 15px;
+      padding: 14px 26px;
       background: #38bdf8;
       color: black;
       font-weight: bold;
       border-radius: 10px;
+      text-decoration: none;
+    }
+
+    /* CONTACT */
+    .contact a {
+      display: inline-block;
+      margin: 10px 15px;
+      color: #38bdf8;
+      font-weight: bold;
       text-decoration: none;
     }
 
@@ -140,20 +156,40 @@
   </div>
 
   <nav>
-    <a href="#games">Games</a>
+    <a href="#home">Home</a>
     <a href="#about">About</a>
+    <a href="#games">Games</a>
     <a href="#apply">Apply</a>
-    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">Roblox Group</a>
-    <a href="https://discord.gg/KDgXznhSsc" target="_blank">Discord</a>
+    <a href="#contact">Contact</a>
   </nav>
 </header>
 
-<!-- HERO -->
-<section class="hero">
+<!-- HOME -->
+<section id="home" class="hero">
+  <img src="logo.png" alt="Amazing Games Logo">
   <h1>Building the Next Amazing Roblox Games</h1>
   <p>
-    Amazing Games is a Roblox studio focused on creating polished, replayable,
-    front-page-ready experiences and investing in talented developers.
+    Amazing Games is a Roblox development studio focused on creating polished,
+    replayable, and front-page-worthy experiences while investing in talent
+    and ambitious ideas.
+  </p>
+</section>
+
+<!-- ABOUT -->
+<section id="about">
+  <h1>About Us</h1>
+
+  <p>
+    Amazing Games was founded see you in <b>January 2025</b> with the goal of building
+    high-quality Roblox games that stand out from the rest. From competitive
+    multiplayer experiences to immersive adventures, our focus has always been
+    on quality and long-term player engagement.
+  </p>
+
+  <p>
+    Our mission is to create future <b>“Amazing”</b> games that have the potential
+    to reach the Roblox front page. We are a studio willing to invest in developers,
+    collaborate with creators, and support projects that show strong potential.
   </p>
 </section>
 
@@ -165,40 +201,84 @@
 
     <div class="game-card" onclick="window.open('https://www.roblox.com/games/92661235863904/Prison-Island')">
       <img id="thumb-prison">
-      <div class="overlay">
-        <p>Escape or enforce the law on a remote prison island.</p>
-      </div>
-      <div class="game-info">
-        <div class="game-title">🔥 Prison Island</div>
-      </div>
+      <div class="overlay"><p>Escape or enforce the law on a remote prison island.</p></div>
+      <div class="game-info">🔥 Prison Island</div>
     </div>
 
     <div class="game-card" onclick="window.open('https://www.roblox.com/games/97441539448665/99-Rooms-in-a-basement')">
       <img id="thumb-99">
-      <div class="overlay">
-        <p>Survive puzzles and horrors in a dark basement.</p>
-      </div>
-      <div class="game-info">
-        <div class="game-title">🚪 99 Rooms in a Basement</div>
-      </div>
+      <div class="overlay"><p>Survive puzzles and horrors in a dark basement.</p></div>
+      <div class="game-info">🚪 99 Rooms in a Basement</div>
     </div>
 
     <div class="game-card" onclick="window.open('https://www.roblox.com/games/74672529469747/Eat-Food-To-Grow-Bigger')">
       <img id="thumb-eat">
-      <div class="overlay">
-        <p>Eat, grow, rebirth, and dominate the leaderboard.</p>
-      </div>
-      <div class="game-info">
-        <div class="game-title">🍔 Eat Food To Grow Bigger!</div>
-      </div>
+      <div class="overlay"><p>Eat, grow, rebirth, and dominate the leaderboard.</p></div>
+      <div class="game-info">🍔 Eat Food To Grow Bigger!</div>
     </div>
 
   </div>
 </section>
 
-<!-- ABOUT -->
-<section id="about">
-  <h1>About Us</h1>
-  <p style="max-width:800px; margin:auto; font-size:18px;">
-    Founded in <b>January 2025</b>, Amazing Games is a Roblox
+<!-- APPLY -->
+<section id="apply">
+  <h1>Apply</h1>
 
+  <div class="apply-box">
+    <p><b>Want to apply for a job?</b><br>
+    Fill out this Google Form to apply to work with Amazing Games.</p>
+
+    <a class="apply-btn"
+       href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform"
+       target="_blank">
+      Apply for a Job
+    </a>
+  </div>
+
+  <div class="apply-box">
+    <p><b>Looking for investors for your game?</b><br>
+    Submit your project and pitch it to Amazing Games for potential investment.</p>
+
+    <a class="apply-btn"
+       href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform"
+       target="_blank">
+      Submit Your Game
+    </a>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="contact">
+  <h1>Get in Touch</h1>
+
+  <a href="https://discord.gg/KDgXznhSsc" target="_blank">Join Our Discord</a>
+  <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">
+    Roblox Group
+  </a>
+</section>
+
+<footer>
+  © 2025 Amazing Games
+</footer>
+
+<!-- ROBLOX THUMBNAILS -->
+<script>
+  async function loadThumb(gameId, imgId) {
+    try {
+      const res = await fetch(
+        `https://thumbnails.roblox.com/v1/games/icons?gameIds=${gameId}&size=512x512&format=Png&isCircular=false`
+      );
+      const data = await res.json();
+      document.getElementById(imgId).src = data.data[0]?.imageUrl || "logo.png";
+    } catch {
+      document.getElementById(imgId).src = "logo.png";
+    }
+  }
+
+  loadThumb("92661235863904", "thumb-prison");
+  loadThumb("97441539448665", "thumb-99");
+  loadThumb("74672529469747", "thumb-eat");
+</script>
+
+</body>
+</html>
