--- a/index.html
+++ b/index.html
@@ -1,284 +1,280 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Amazing Games</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Amazing Games Studio</title>
 
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
+<style>
+html {
+  scroll-behavior: smooth;
+}
 
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: white;
-    }
+body {
+  margin: 0;
+  font-family: 'Inter', Arial, sans-serif;
+  background: radial-gradient(circle at top, #0b1b33, #020814);
+  color: #ffffff;
+}
 
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      background: #020617;
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+/* NAV */
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: rgba(2,8,20,0.7);
+  backdrop-filter: blur(12px);
+  padding: 16px 40px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  z-index: 100;
+}
 
-    nav a {
-      color: #38bdf8;
-      margin-left: 18px;
-      text-decoration: none;
-      font-weight: bold;
-    }
+nav a {
+  color: #38bdf8;
+  text-decoration: none;
+  font-weight: 600;
+}
 
-    section {
-      padding: 100px 20px;
-      text-align: center;
-    }
+nav a:hover {
+  text-decoration: underline;
+}
 
-    h1 {
-      font-size: 42px;
-      margin-bottom: 20px;
-    }
+/* SECTIONS */
+section {
+  padding: 120px 20px;
+  text-align: center;
+}
 
-    p {
-      font-size: 18px;
-      max-width: 850px;
-      margin: 15px auto;
-      opacity: 0.9;
-      line-height: 1.6;
-    }
+h1 {
+  font-size: 3.2rem;
+  margin-bottom: 12px;
+}
 
-    /* HERO */
-    .hero img {
-      height: 110px;
-      margin-bottom: 20px;
-    }
+h2 {
+  font-size: 2.4rem;
+  margin-bottom: 40px;
+}
 
-    /* GAMES */
-    .games {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      max-width: 1200px;
-      margin: auto;
-      padding-top: 40px;
-    }
+p {
+  max-width: 900px;
+  margin: 0 auto 20px;
+  line-height: 1.7;
+  opacity: 0.9;
+}
 
-    .game-card {
-      position: relative;
-      background: #020617;
-      border-radius: 14px;
-      overflow: hidden;
-      cursor: pointer;
-      transition: transform 0.3s;
-    }
+/* HERO */
+.hero img {
+  width: 160px;
+  margin-bottom: 20px;
+}
 
-    .game-card:hover {
-      transform: scale(1.04);
-    }
+.hero h1 {
+  font-size: 3.5rem;
+}
 
-    .game-card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      background: black;
-    }
+.hero p {
+  font-size: 1.1rem;
+}
 
-    .overlay {
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.85);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
+/* GAMES */
+.games-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 24px;
+  max-width: 1000px;
+  margin: 0 auto;
+}
 
-    .game-card:hover .overlay {
-      opacity: 1;
-    }
+.game-card {
+  background: #050d1f;
+  border-radius: 16px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
 
-    .game-info {
-      padding: 15px;
-      font-weight: bold;
-    }
+.game-card:hover {
+  transform: translateY(-6px);
+}
 
-    /* APPLY */
-    .apply-box {
-      background: #020617;
-      border-radius: 14px;
-      padding: 30px;
-      max-width: 700px;
-      margin: 30px auto;
-    }
+.game-card img {
+  width: 100%;
+  display: block;
+}
 
-    .apply-btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 14px 26px;
-      background: #38bdf8;
-      color: black;
-      font-weight: bold;
-      border-radius: 10px;
-      text-decoration: none;
-    }
+.game-card div {
+  padding: 14px;
+  font-weight: 600;
+}
 
-    /* CONTACT */
-    .contact a {
-      display: inline-block;
-      margin: 10px 15px;
-      color: #38bdf8;
-      font-weight: bold;
-      text-decoration: none;
-    }
+/* COUNTERS */
+.stats {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-bottom: 60px;
+  flex-wrap: wrap;
+}
 
-    footer {
-      padding: 40px;
-      text-align: center;
-      opacity: 0.6;
-    }
-  </style>
+.stat {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.stat span {
+  display: block;
+  font-size: 0.9rem;
+  opacity: 0.7;
+}
+
+/* APPLY */
+.apply-box {
+  background: #050d1f;
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 40px;
+  border-radius: 20px;
+}
+
+.apply-box a {
+  display: inline-block;
+  margin-top: 20px;
+  background: #38bdf8;
+  color: #000;
+  padding: 12px 24px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+/* CONTACT */
+.contact-links {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.contact-links a {
+  color: #38bdf8;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+footer {
+  padding: 40px;
+  opacity: 0.5;
+}
+</style>
 </head>
 
 <body>
 
-<header>
-  <div style="display:flex; align-items:center; gap:12px;">
-    <img src="logo.png" style="height:42px;">
-    <h2 style="margin:0;">Amazing Games</h2>
-  </div>
+<nav>
+  <a href="#home">Home</a>
+  <a href="#games">Games</a>
+  <a href="#apply">Apply</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#games">Games</a>
-    <a href="#apply">Apply</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
-
-<!-- HOME -->
 <section id="home" class="hero">
   <img src="logo.png" alt="Amazing Games Logo">
-  <h1>Building the Next Amazing Roblox Games</h1>
+  <h1>Amazing Games Studio</h1>
   <p>
-    Amazing Games is a Roblox development studio focused on creating polished,
-    replayable, and front-page-worthy experiences while investing in talent
-    and ambitious ideas.
+    Amazing Games is a Roblox development studio focused on building polished,
+    replayable, and front-page-worthy experiences while investing in talent and bold ideas.
   </p>
 </section>
 
-<!-- ABOUT -->
-<section id="about">
-  <h1>About Us</h1>
-
-  <p>
-    Amazing Games was founded see you in <b>January 2025</b> with the goal of building
-    high-quality Roblox games that stand out from the rest. From competitive
-    multiplayer experiences to immersive adventures, our focus has always been
-    on quality and long-term player engagement.
-  </p>
-
-  <p>
-    Our mission is to create future <b>“Amazing”</b> games that have the potential
-    to reach the Roblox front page. We are a studio willing to invest in developers,
-    collaborate with creators, and support projects that show strong potential.
-  </p>
-</section>
-
-<!-- GAMES -->
 <section id="games">
-  <h1>Our Games</h1>
+  <h2>Our Games</h2>
 
-  <div class="games">
+  <div class="stats">
+    <div class="stat">Loading…<span>Players</span></div>
+    <div class="stat">Millions+<span>Visits</span></div>
+    <div class="stat">3<span>Games</span></div>
+  </div>
 
-    <div class="game-card" onclick="window.open('https://www.roblox.com/games/92661235863904/Prison-Island')">
-      <img id="thumb-prison">
-      <div class="overlay"><p>Escape or enforce the law on a remote prison island.</p></div>
-      <div class="game-info">🔥 Prison Island</div>
-    </div>
+  <div class="games-grid">
+    <a class="game-card" href="https://www.roblox.com/games/92661235863904/Prison-Island" target="_blank">
+      <img src="logo.png">
+      <div>🔥 Prison Island</div>
+    </a>
 
-    <div class="game-card" onclick="window.open('https://www.roblox.com/games/97441539448665/99-Rooms-in-a-basement')">
-      <img id="thumb-99">
-      <div class="overlay"><p>Survive puzzles and horrors in a dark basement.</p></div>
-      <div class="game-info">🚪 99 Rooms in a Basement</div>
-    </div>
+    <a class="game-card" href="https://www.roblox.com/games/97441539448665/99-Rooms-in-a-basement" target="_blank">
+      <img src="logo.png">
+      <div>🚪 99 Rooms in a Basement</div>
+    </a>
 
-    <div class="game-card" onclick="window.open('https://www.roblox.com/games/74672529469747/Eat-Food-To-Grow-Bigger')">
-      <img id="thumb-eat">
-      <div class="overlay"><p>Eat, grow, rebirth, and dominate the leaderboard.</p></div>
-      <div class="game-info">🍔 Eat Food To Grow Bigger!</div>
-    </div>
-
+    <a class="game-card" href="https://www.roblox.com/games/74672529469747/Eat-Food-To-Grow-Bigger" target="_blank">
+      <img src="logo.png">
+      <div>🍔 Eat Food To Grow Bigger</div>
+    </a>
   </div>
 </section>
 
-<!-- APPLY -->
 <section id="apply">
-  <h1>Apply</h1>
+  <h2>Apply</h2>
 
   <div class="apply-box">
-    <p><b>Want to apply for a job?</b><br>
+    <p><strong>Want to apply for a job?</strong><br>
     Fill out this Google Form to apply to work with Amazing Games.</p>
-
-    <a class="apply-btn"
-       href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform"
-       target="_blank">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">
       Apply for a Job
     </a>
   </div>
 
   <div class="apply-box">
-    <p><b>Looking for investors for your game?</b><br>
+    <p><strong>Looking for investors for your game?</strong><br>
     Submit your project and pitch it to Amazing Games for potential investment.</p>
-
-    <a class="apply-btn"
-       href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform"
-       target="_blank">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">
       Submit Your Game
     </a>
   </div>
 </section>
 
-<!-- CONTACT -->
-<section id="contact" class="contact">
-  <h1>Get in Touch</h1>
+<section id="about">
+  <h2>About Us</h2>
 
-  <a href="https://discord.gg/KDgXznhSsc" target="_blank">Join Our Discord</a>
-  <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">
-    Roblox Group
-  </a>
+  <p>
+    Amazing Games was founded in January 2025 with the vision of creating Roblox
+    experiences that stand out from the rest through quality, creativity, and longevity.
+  </p>
+
+  <p>
+    Our studio focuses on building games that encourage replayability, community
+    engagement, and long-term player retention rather than short-lived trends.
+  </p>
+
+  <p>
+    We actively invest in talented developers, designers, and ambitious creators,
+    providing funding, guidance, and development support to help projects reach their full potential.
+  </p>
+
+  <p>
+    Our goal is simple: create future “Amazing” games that have the potential to reach
+    the Roblox front page and entertain millions of players worldwide.
+  </p>
+</section>
+
+<section id="contact">
+  <h2>Get in Touch</h2>
+
+  <div class="contact-links">
+    <a href="https://discord.gg/KDgXznhSsc" target="_blank">Join Our Discord</a>
+    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">
+      Roblox Group
+    </a>
+  </div>
 </section>
 
 <footer>
-  © 2025 Amazing Games
+  © 2025 Amazing Games Studio
 </footer>
-
-<!-- ROBLOX THUMBNAILS -->
-<script>
-  async function loadThumb(gameId, imgId) {
-    try {
-      const res = await fetch(
-        `https://thumbnails.roblox.com/v1/games/icons?gameIds=${gameId}&size=512x512&format=Png&isCircular=false`
-      );
-      const data = await res.json();
-      document.getElementById(imgId).src = data.data[0]?.imageUrl || "logo.png";
-    } catch {
-      document.getElementById(imgId).src = "logo.png";
-    }
-  }
-
-  loadThumb("92661235863904", "thumb-prison");
-  loadThumb("97441539448665", "thumb-99");
-  loadThumb("74672529469747", "thumb-eat");
-</script>
 
 </body>
 </html>
+
