--- a/index.html
+++ b/index.html
@@ -1,173 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Amazing Games Studio</title>
+  <meta charset="UTF-8" />
+  <title>Amazing Games Studio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<style>
-html {
-  scroll-behavior: smooth;
-}
+  <style>
+    html { scroll-behavior: smooth; }
 
-body {
-  margin: 0;
-  font-family: 'Inter', Arial, sans-serif;
-  background: radial-gradient(circle at top, #0b1b33, #020814);
-  color: #ffffff;
-}
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #020814;
+      color: white;
+    }
 
-/* NAV */
-nav {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background: rgba(2,8,20,0.7);
-  backdrop-filter: blur(12px);
-  padding: 16px 40px;
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  z-index: 100;
-}
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+      background: rgba(2,8,20,0.8);
+      backdrop-filter: blur(10px);
+    }
 
-nav a {
-  color: #38bdf8;
-  text-decoration: none;
-  font-weight: 600;
-}
+    nav a {
+      color: #38bdf8;
+      margin: 0 16px;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-nav a:hover {
-  text-decoration: underline;
-}
+    section {
+      padding: 100px 20px;
+      text-align: center;
+    }
 
-/* SECTIONS */
-section {
-  padding: 120px 20px;
-  text-align: center;
-}
+    /* HERO */
+    .hero {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background:
+        radial-gradient(circle at center, rgba(56,189,248,0.15), transparent 60%),
+        linear-gradient(#020814, #020814);
+    }
 
-h1 {
-  font-size: 3.2rem;
-  margin-bottom: 12px;
-}
+    .hero-content img {
+      width: 220px;
+      margin-bottom: 30px;
+    }
 
-h2 {
-  font-size: 2.4rem;
-  margin-bottom: 40px;
-}
+    .hero h1 {
+      font-size: 4rem;
+      margin-bottom: 20px;
+    }
 
-p {
-  max-width: 900px;
-  margin: 0 auto 20px;
-  line-height: 1.7;
-  opacity: 0.9;
-}
+    .hero p {
+      font-size: 1.3rem;
+      max-width: 800px;
+      margin: auto;
+      opacity: 0.9;
+    }
 
-/* HERO */
-.hero img {
-  width: 160px;
-  margin-bottom: 20px;
-}
+    /* COUNTERS */
+    .stats {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 50px;
+      flex-wrap: wrap;
+    }
 
-.hero h1 {
-  font-size: 3.5rem;
-}
+    .stat {
+      background: rgba(255,255,255,0.05);
+      padding: 20px 40px;
+      border-radius: 14px;
+    }
 
-.hero p {
-  font-size: 1.1rem;
-}
+    .stat h3 {
+      font-size: 2rem;
+      margin: 0;
+    }
 
-/* GAMES */
-.games-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 24px;
-  max-width: 1000px;
-  margin: 0 auto;
-}
+    .stat span {
+      opacity: 0.8;
+      font-size: 0.9rem;
+    }
 
-.game-card {
-  background: #050d1f;
-  border-radius: 16px;
-  overflow: hidden;
-  cursor: pointer;
-  transition: transform 0.3s;
-}
+    /* GAMES */
+    .games-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 30px;
+      max-width: 1000px;
+      margin: auto;
+    }
 
-.game-card:hover {
-  transform: translateY(-6px);
-}
+    .game-card {
+      background: rgba(255,255,255,0.05);
+      border-radius: 14px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
 
-.game-card img {
-  width: 100%;
-  display: block;
-}
+    .game-card:hover {
+      transform: translateY(-6px);
+    }
 
-.game-card div {
-  padding: 14px;
-  font-weight: 600;
-}
+    .game-card img {
+      width: 100%;
+      display: block;
+    }
 
-/* COUNTERS */
-.stats {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin-bottom: 60px;
-  flex-wrap: wrap;
-}
+    .game-card p {
+      padding: 12px;
+      font-weight: bold;
+    }
 
-.stat {
-  font-size: 2rem;
-  font-weight: 700;
-}
+    /* APPLY */
+    .apply-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+      max-width: 900px;
+      margin: auto;
+    }
 
-.stat span {
-  display: block;
-  font-size: 0.9rem;
-  opacity: 0.7;
-}
+    .apply-box {
+      background: rgba(255,255,255,0.05);
+      padding: 30px;
+      border-radius: 16px;
+    }
 
-/* APPLY */
-.apply-box {
-  background: #050d1f;
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 40px;
-  border-radius: 20px;
-}
+    .apply-box a {
+      display: inline-block;
+      margin-top: 16px;
+      padding: 12px 20px;
+      background: #38bdf8;
+      color: #020814;
+      border-radius: 10px;
+      font-weight: bold;
+      text-decoration: none;
+    }
 
-.apply-box a {
-  display: inline-block;
-  margin-top: 20px;
-  background: #38bdf8;
-  color: #000;
-  padding: 12px 24px;
-  border-radius: 10px;
-  text-decoration: none;
-  font-weight: 700;
-}
+    /* ABOUT */
+    .about p {
+      font-size: 1.15rem;
+      max-width: 900px;
+      margin: 0 auto 28px;
+      line-height: 1.9;
+      opacity: 0.95;
+    }
 
-/* CONTACT */
-.contact-links {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  flex-wrap: wrap;
-}
+    /* CONTACT */
+    .contact-links a {
+      display: inline-block;
+      margin: 20px;
+      color: #38bdf8;
+      font-weight: bold;
+      text-decoration: none;
+    }
 
-.contact-links a {
-  color: #38bdf8;
-  font-weight: 700;
-  text-decoration: none;
-}
-
-footer {
-  padding: 40px;
-  opacity: 0.5;
-}
-</style>
+    footer {
+      padding: 40px;
+      opacity: 0.6;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 
 <body>
@@ -180,89 +185,106 @@ footer {
   <a href="#contact">Contact</a>
 </nav>
 
+<!-- HOME -->
 <section id="home" class="hero">
-  <img src="logo.png" alt="Amazing Games Logo">
-  <h1>Amazing Games Studio</h1>
-  <p>
-    Amazing Games is a Roblox development studio focused on building polished,
-    replayable, and front-page-worthy experiences while investing in talent and bold ideas.
-  </p>
+  <div class="hero-content">
+    <img src="logo.png" alt="Amazing Games Logo">
+    <h1>Amazing Games Studio</h1>
+    <p>
+      Building high-quality Roblox experiences designed to reach the front page,
+      engage millions of players, and stand the test of time.
+    </p>
+
+    <div class="stats">
+      <div class="stat">
+        <h3>Loading…</h3>
+        <span>Players</span>
+      </div>
+      <div class="stat">
+        <h3>3+</h3>
+        <span>Games</span>
+      </div>
+      <div class="stat">
+        <h3>2025</h3>
+        <span>Founded</span>
+      </div>
+    </div>
+  </div>
 </section>
 
+<!-- GAMES -->
 <section id="games">
   <h2>Our Games</h2>
-
-  <div class="stats">
-    <div class="stat">Loading…<span>Players</span></div>
-    <div class="stat">Millions+<span>Visits</span></div>
-    <div class="stat">3<span>Games</span></div>
-  </div>
-
   <div class="games-grid">
-    <a class="game-card" href="https://www.roblox.com/games/92661235863904/Prison-Island" target="_blank">
-      <img src="logo.png">
-      <div>🔥 Prison Island</div>
-    </a>
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/92661235863904/Prison-Island')">
+      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=92661235863904&width=768&height=432">
+      <p>🔥 Prison Island</p>
+    </div>
 
-    <a class="game-card" href="https://www.roblox.com/games/97441539448665/99-Rooms-in-a-basement" target="_blank">
-      <img src="logo.png">
-      <div>🚪 99 Rooms in a Basement</div>
-    </a>
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/97441539448665/99-Rooms-in-a-basement')">
+      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=97441539448665&width=768&height=432">
+      <p>🚪 99 Rooms in a Basement</p>
+    </div>
 
-    <a class="game-card" href="https://www.roblox.com/games/74672529469747/Eat-Food-To-Grow-Bigger" target="_blank">
-      <img src="logo.png">
-      <div>🍔 Eat Food To Grow Bigger</div>
-    </a>
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/74672529469747/Eat-Food-To-Grow-Bigger')">
+      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=74672529469747&width=768&height=432">
+      <p>🍔 Eat Food To Grow Bigger</p>
+    </div>
   </div>
 </section>
 
+<!-- APPLY -->
 <section id="apply">
   <h2>Apply</h2>
 
-  <div class="apply-box">
-    <p><strong>Want to apply for a job?</strong><br>
-    Fill out this Google Form to apply to work with Amazing Games.</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">
-      Apply for a Job
-    </a>
-  </div>
+  <div class="apply-grid">
+    <div class="apply-box">
+      <h3>Apply for a Job</h3>
+      <p>Want to apply for a job? Fill out this Google Form to apply.</p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">
+        Apply for a Job
+      </a>
+    </div>
 
-  <div class="apply-box">
-    <p><strong>Looking for investors for your game?</strong><br>
-    Submit your project and pitch it to Amazing Games for potential investment.</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">
-      Submit Your Game
-    </a>
+    <div class="apply-box">
+      <h3>Looking for Investment?</h3>
+      <p>Submit your game and pitch it to Amazing Games for potential investment.</p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">
+        Submit Your Game
+      </a>
+    </div>
   </div>
 </section>
 
-<section id="about">
+<!-- ABOUT -->
+<section id="about" class="about">
   <h2>About Us</h2>
 
   <p>
-    Amazing Games was founded in January 2025 with the vision of creating Roblox
-    experiences that stand out from the rest through quality, creativity, and longevity.
+    Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission:
+    to invest in, build, and publish amazing games with real front-page potential.
   </p>
 
   <p>
-    Our studio focuses on building games that encourage replayability, community
-    engagement, and long-term player retention rather than short-lived trends.
+    We focus on creating experiences that are not only fun to play, but also designed to succeed long-term
+    through strong retention, smart monetization, and replayable core gameplay loops.
   </p>
 
   <p>
-    We actively invest in talented developers, designers, and ambitious creators,
-    providing funding, guidance, and development support to help projects reach their full potential.
+    Our studio believes great Roblox games come from the balance of creativity and strategy.
+    This means thoughtful game design, clean scripting, polished UI, and monetization that enhances gameplay.
   </p>
 
   <p>
-    Our goal is simple: create future “Amazing” games that have the potential to reach
-    the Roblox front page and entertain millions of players worldwide.
+    Since our founding, Amazing Games has operated with a long-term mindset:
+    build quality first, learn from every release, and continuously raise our standards.
+    If it’s amazing, we build it.
   </p>
 </section>
 
+<!-- CONTACT -->
 <section id="contact">
   <h2>Get in Touch</h2>
-
   <div class="contact-links">
     <a href="https://discord.gg/KDgXznhSsc" target="_blank">Join Our Discord</a>
     <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">
