--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ section {
 }
 
 .hero-content img {
-  width: 250px;
+  width: 320px;
   margin-bottom: 18px;
   filter: drop-shadow(0 0 24px rgba(56,189,248,.45));
 }
@@ -255,10 +255,33 @@ footer a {
 <!-- ABOUT -->
 <section id="about" class="about">
   <h2>About Us</h2>
-  <p>Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission: to invest in, build, and publish amazing games with real front-page potential.</p>
-  <p>We focus on strong retention, polished UI, clean scripting, and monetization that enhances gameplay.</p>
-  <p>If it’s amazing — we build it.</p>
+
+  <p>
+    Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission:
+    to invest in, build, and publish amazing games with real front-page potential.
+  </p>
+
+  <p>
+    We focus on creating experiences that are not only fun to play, but also designed to succeed
+    long-term through strong retention, smart monetization, and replayable core gameplay loops.
+    Every project we take on is built with intention, whether it’s a competitive multiplayer experience,
+    a social game for friends, or a unique concept that stands out in Roblox discovery.
+  </p>
+
+  <p>
+    Our studio believes great Roblox games come from the balance of creativity and strategy.
+    This means thoughtful game design, clean and optimized scripting, strong visual identity,
+    polished UI, and monetization that enhances gameplay rather than hurting it.
+  </p>
+
+  <p>
+    Since our founding, Amazing Games has operated with a long-term mindset:
+    build quality first, learn from every release, and continuously raise our standards.
+  </p>
+
+  <p><strong>If it’s amazing, we build it.</strong></p>
 </section>
+
 
 <!-- CONTACT -->
 <section id="contact">
