--- a/index.html
+++ b/index.html
@@ -40,27 +40,34 @@ nav a {
 
 /* SECTIONS */
 section {
-  padding: 120px 8%;
+  padding: 90px 8%;
   text-align: center;
+}
+
+section h2 {
+  font-size: 3.2rem;
+  margin-bottom: 60px;
+  font-weight: 900;
 }
 
 /* HERO */
 .hero {
   min-height: 100vh;
+  padding-top: 140px;
+  padding-bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .hero-content img {
-  width: 160px;
-  margin-bottom: 18px;
-  filter: drop-shadow(0 0 24px rgba(56,189,248,.45));
+  width: 350px;
+  margin-bottom: 26px;
 }
 
 .hero h1 {
-  font-size: 4.2rem;
-  margin: 12px 0;
+  font-size: 4.3rem;
+  margin: 10px 0;
 }
 
 .hero p {
@@ -74,37 +81,36 @@ section {
 .counters {
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 26px;
-  margin-top: 42px;
+  gap: 36px;
+  margin-top: 48px;
   flex-wrap: wrap;
 }
 
 .counter {
   background: rgba(255,255,255,.07);
   padding: 26px 42px;
-  border-radius: 20px;
-  backdrop-filter: blur(8px);
+  border-radius: 18px;
 }
 
 .counter h2 {
-  font-size: 2.6rem;
+  font-size: 2.7rem;
   margin: 0;
 }
 
 /* GAMES */
+#games { padding-top: 40px; }
+
 .games-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
   gap: 36px;
-  margin-top: 60px;
 }
 
 .game-card {
-  background: linear-gradient(180deg, #0d1222, #090e1d);
-  border-radius: 26px;
+  background: #0d1222;
+  border-radius: 22px;
   overflow: hidden;
-  box-shadow: 0 40px 90px rgba(0,0,0,.6);
+  box-shadow: 0 30px 80px rgba(0,0,0,.55);
   transition: transform .25s ease;
 }
 
@@ -124,7 +130,7 @@ section {
   top: 0;
   width: 100%;
   padding: 14px;
-  font-size: 1.35rem;
+  font-size: 1.4rem;
   font-weight: 900;
   background: linear-gradient(to bottom, rgba(0,0,0,.75), transparent);
 }
@@ -133,15 +139,15 @@ section {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  padding: 16px 20px;
-  background: #080d1b;
+  padding: 14px 18px;
+  background: #0a0f1f;
   font-weight: 800;
 }
 
 .play-btn {
   background: #22c55e;
   color: black;
-  padding: 10px 26px;
+  padding: 10px 24px;
   border-radius: 999px;
   text-decoration: none;
   font-weight: 900;
@@ -149,9 +155,9 @@ section {
 
 /* APPLY */
 .apply-box {
-  background: rgba(255,255,255,.06);
+  background: rgba(255,255,255,.07);
   padding: 42px;
-  border-radius: 26px;
+  border-radius: 22px;
   margin: 32px auto;
   max-width: 640px;
 }
@@ -169,8 +175,8 @@ section {
 
 /* ABOUT */
 .about p {
-  font-size: 1.15rem;
-  max-width: 900px;
+  font-size: 1.2rem;
+  max-width: 920px;
   margin: 26px auto;
   line-height: 1.9;
   opacity: .95;
@@ -179,11 +185,10 @@ section {
 /* FOOTER */
 footer {
   padding: 60px 20px;
-  text-align: center;
 }
 
 footer a {
-  margin: 0 20px;
+  margin: 0 18px;
   color: #38bdf8;
   text-decoration: none;
   font-weight: 800;
@@ -211,15 +216,15 @@ footer a {
     <div class="counters">
       <div class="counter">
         <h2 id="totalPlayers">—</h2>
-        <span>👥 Players Online</span>
+        <span>Players Online</span>
       </div>
       <div class="counter">
         <h2 id="totalVisits">—</h2>
-        <span>👁️ Total Visits</span>
+        <span>Total Visits</span>
       </div>
       <div class="counter">
         <h2>3</h2>
-        <span>🎮 Games</span>
+        <span>Games</span>
       </div>
     </div>
   </div>
@@ -255,9 +260,16 @@ footer a {
 <!-- ABOUT -->
 <section id="about" class="about">
   <h2>About Us</h2>
+
   <p>Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission: to invest in, build, and publish amazing games with real front-page potential.</p>
-  <p>We focus on strong retention, polished UI, clean scripting, and monetization that enhances gameplay.</p>
-  <p>If it’s amazing — we build it.</p>
+
+  <p>We focus on creating experiences that are not only fun to play, but also designed to succeed long-term through strong retention, smart monetization, and replayable core gameplay loops.</p>
+
+  <p>Our studio believes great Roblox games come from the balance of creativity and strategy. This means thoughtful game design, clean and optimized scripting, strong visual identity, polished UI, and monetization that enhances gameplay rather than hurting it.</p>
+
+  <p>Since our founding, Amazing Games has operated with a long-term mindset: build quality first, learn from every release, and continuously raise our standards.</p>
+
+  <p><strong>If it’s amazing, we build it.</strong></p>
 </section>
 
 <!-- CONTACT -->
@@ -270,43 +282,69 @@ footer a {
 </section>
 
 <script>
-/* 🔴 CHANGE THIS TO YOUR WORKER URL */
+/* 🔴 CHANGE THIS TO YOUR WORKER STATS URL */
 const WORKER_URL = "https://api.amazinggames.cloud/stats";
 
-async function loadGames() {
-  const res = await fetch(WORKER_URL);
-  const json = await res.json();
+/* STATIC GAME DEFINITIONS */
+const games = [
+  { id: 7349544299, name: "🔥 Prison Island", placeId: 92661235863904 },
+  { id: 6925763113, name: "🚪 99 Rooms in a Basement", placeId: 97441539448665 },
+  { id: 8168837991, name: "🍔 Eat Food To Grow Bigger!", placeId: 74672529469747 }
+];
 
-  let totalPlayers = 0;
-  let totalVisits = 0;
-
+/* RENDER GAME CARDS IMMEDIATELY */
+function renderGames() {
   const grid = document.getElementById("gamesGrid");
   grid.innerHTML = "";
 
-  json.data.forEach(game => {
-    totalPlayers += game.playing;
-    totalVisits += game.visits;
-
+  games.forEach(game => {
     grid.innerHTML += `
       <div class="game-card">
-        <div class="game-thumb" style="background-image:url('https://tr.rbxcdn.com/${game.rootPlaceId}/768/432/Image/Png')">
+        <div class="game-thumb" style="background-image:url('https://tr.rbxcdn.com/${game.placeId}/768/432/Image/Png')">
           <div class="game-title">${game.name}</div>
         </div>
         <div class="game-footer">
-          <div>👥 ${game.playing}</div>
-          <a class="play-btn" href="https://www.roblox.com/games/${game.rootPlaceId}" target="_blank">▶ PLAY</a>
-          <div>👁 ${game.visits.toLocaleString()}</div>
+          <div id="players-${game.id}">👥 —</div>
+          <a class="play-btn" href="https://www.roblox.com/games/${game.placeId}" target="_blank">▶ PLAY</a>
+          <div id="visits-${game.id}">👁 —</div>
         </div>
       </div>
     `;
   });
-
-  document.getElementById("totalPlayers").innerText = totalPlayers.toLocaleString();
-  document.getElementById("totalVisits").innerText = totalVisits.toLocaleString();
 }
 
-loadGames();
-setInterval(loadGames, 5 * 60 * 1000);
+/* UPDATE STATS */
+async function updateStats() {
+  try {
+    const res = await fetch(WORKER_URL);
+    const json = await res.json();
+
+    let totalPlayers = 0;
+    let totalVisits = 0;
+
+    json.data.forEach(game => {
+      totalPlayers += game.playing;
+      totalVisits += game.visits;
+
+      const players = document.getElementById(`players-${game.id}`);
+      const visits = document.getElementById(`visits-${game.id}`);
+
+      if (players) players.innerText = `👥 ${game.playing}`;
+      if (visits) visits.innerText = `👁 ${game.visits.toLocaleString()}`;
+    });
+
+    document.getElementById("totalPlayers").innerText = totalPlayers.toLocaleString();
+    document.getElementById("totalVisits").innerText = totalVisits.toLocaleString();
+
+  } catch (e) {
+    console.warn("Stats failed, retrying later");
+  }
+}
+
+/* INIT */
+renderGames();
+updateStats();
+setInterval(updateStats, 5 * 60 * 1000);
 </script>
 
 </body>
