--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@ section h2 {
 .hero-content img {
   width: 350px;
   margin-bottom: 26px;
+
+  /* GLOW EFFECT */
+  filter:
+    drop-shadow(0 0 30px rgba(56, 189, 248, 0.55))
+    drop-shadow(0 0 70px rgba(99, 102, 241, 0.35));
 }
+
 
 .hero h1 {
   font-size: 4.3rem;
