--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@ section h2 {
   width: 350px;
   margin-bottom: 26px;
 
-  /* GLOW EFFECT */
   filter:
-    drop-shadow(0 0 30px rgba(56, 189, 248, 0.55))
-    drop-shadow(0 0 70px rgba(99, 102, 241, 0.35));
+    drop-shadow(0 0 40px rgba(56,189,248,0.8))
+    drop-shadow(0 0 90px rgba(56,189,248,0.6))
+    drop-shadow(0 0 160px rgba(99,102,241,0.45))
+    drop-shadow(0 0 260px rgba(99,102,241,0.35));
 }
 
 
