--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ async function updateStats() {
 /* INIT */
 renderGames();
 updateStats();
-setInterval(updateStats, 5 * 60 * 1000);
+setInterval(updateStats, 30 * 1000);
 </script>
 
 </body>
