--- a/index.html
+++ b/index.html
@@ -349,9 +349,11 @@ async function updateStats() {
 }
 
 /* INIT */
-renderGames();
-updateStats();
-setInterval(updateStats, 30 * 1000);
+renderGames();     // Always render cards
+updateStats();     // 1️⃣ Runs on page load / refresh
+
+setInterval(updateStats, 5 * 60 * 1000); // 3️⃣ Every 5 minutes
+
 </script>
 
 </body>
