--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ section h2 {
 .game-card {
   background: #0d1222;
   border-radius: 22px;
-  overflow: hidden;
+  overflow: hidden; /* IMPORTANT */
   box-shadow: 0 30px 80px rgba(0,0,0,.55);
   transition: transform .25s ease;
 }
@@ -127,7 +127,23 @@ section h2 {
   background-size: cover;
   background-position: center;
   position: relative;
+
+  /* NEW */
+  margin: 14px;                 /* matches bottom spacing */
+  border-radius: 16px;          /* same visual cutoff as bottom */
 }
+  .game-thumb::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(
+    to top,
+    rgba(0,0,0,.55),
+    rgba(0,0,0,.15),
+    transparent
+  );
+}
+
 
 .game-title {
   position: absolute;
